<resources>
    <string name="app_name">FunTaipei</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textNoNetwork">no network connection available</string>
    <string name="textUpdate">Update</string>
    <string name="textDelete">Delete</string>
    <string name="textDeleteFail">DeleteFail</string>
    <string name="textDeleteSucess">DeleteSucess</string>
    <string name="textCancel">Cancel</string>
    <string name="textInsert">Insert</string>
    <string name="textGroupName">GroupName</string>
    <string name="textNoGroupsFound">No Groups Found</string>
    <string name="textPickPicture">Pick Picture</string>
    <string name="textTakePicture">Tack Pitcure</string>
    <string name="textStartDate">Travel dates</string>

    <string name="textDatePicker">Pick</string>
    <string name="textTravel">Travel</string>
    <string name="textTravelName">Pick</string>
    <string name="textNumber">Maximum number:</string>
    <string name="textDateStart">Registration begins：</string>
    <string name="textDateEnd">Stop registration</string>
    <string name="textNote">Note</string>
    <string name="textNoPlacesFound">no place found</string>
    <string name="textDeleteSuccess">delete successfully</string>
    <string name="textNoCameraApp">no camera app found</string>
    <string name="textNameIsInvalid">book name is invalid</string>
    <string name="textInsertFail">insert fail</string>
    <string name="textInsertSuccess">insert successfully</string>
    <string name="textUpdateFail">update fail</string>
    <string name="textUpdateSuccess">update successfully</string>
    <string name="textNoImageCropAppFound">no image crop app found</string>
    <string name="btInsertGroup">INSERT</string>
    <string name="btUpdate">UPDATE</string>
    <string name="etName">Name</string>
    <string-array name="travel_status">
        <item>On the shelf</item>
        <item>Lower shelf</item>
    </string-array>
    <string name="textEmail">E-mail</string>
    <string name="textPassword">Password</string>
    <string name="textLogin">Login</string>
    <string name="textRegister">Register</string>
    <string name="emailEdit">Email</string>
    <string name="textMB_NO">Member NO</string>
    <string name="textMemberName">MemberName</string>
    <string name="textName">Name</string>
    <string name="textMale">Male</string>
    <string name="textFemale">Female</string>
    <string name="textEmailIsInvalid">Email is invalid</string>
    <string name="textPasswordIsInvalid">Password is invalid</string>
    <string name="textGenderIsInvalid">Gender is invalid</string>
    <string name="textBirthdayIsInvalid">Birthday is invalid</string>
    <string name="textRegisterFail">Register Fail</string>
    <string name="textRegisterSuccess">Register Success</string>
    <string name="textLoginSuccess">LoginSuccess</string>
    <string name="textLoginFail">LoginFail</string>
    <string name="textJustgo">Join Us</string>
    <string name="title_activity_collection_">Collection_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="travelCollection1">我的行程</string>
    <string name="placeCollection">我的旅遊點</string>
    <string name="textFinish">確定發起旅遊團嗎？</string>
    <string name="textGroupAlertMessage">報名開始前，你可以前往我的揪團編輯。開始報名後將無法編輯</string>
    <string name="textYes">確定</string>
    <string name="textInsertGroupName">請輸入旅遊團名稱</string>
    <string name="textChoseDate">請選擇活動及報名日期</string>
    <string name="textNo">取消</string>
    <string name="tab1">我的行程</string>
    <string name="tab2">我的旅遊點</string>

    <string name="textJoinFail">報名失敗</string>
    <string name="textIJoinSuccess">報名成功</string>
    <string name="textGender">性別</string>
    <string name="textAccount">帳號</string>
    <string name="textBdy">生日</string>
    <string name="textOk">確定</string>
    <string name="textCan">取消</string>
    <string name="textGroup">團體</string>
    <string name="textLogout">登出</string>
    <string name="textPersoncontact">會員資料</string>
    <string name="textFavoriteSuccess">收藏成功</string>
    <string name="textFavoriteFail">已收藏</string>
    <string name="textInsertNotes">請輸入團體介紹</string>
    <string name="textNoTravelsFound">找不到行程</string>
    <string name="textChoseTravel">請選擇行程</string>
    <string name="textnoTravelDetailsFound">找不到行程明細</string>
    <string name="textRegistered">此賬號已註冊</string>
    <string name="textTravelManage">我的行程</string>
    <string name="textPleaseLogin">請先登入</string>
    <string name="textdoingGroup">進行中</string>
    <string name="textEndGroup">已結束</string>
    <string name="textMyGroup">我的團體</string>
    <string name="textNoInsertGroup">您尚未發起團體</string>
    <string name="textmyNewGroup">我的揪團</string>
    <string name="textNoMemberJoin">尚未有人報名</string>
    <string name="textCancelGroupFail">取消失敗</string>
    <string name="textCancelGroupTrue">取消成功</string>
    <string name="textCancelJoinGroup">您確定取消報名嗎？</string>
    <string name="textaddGroup">前往建立團體</string>
    <string name="joining">進行中</string>
    <string name="textGroupFinish">過往紀錄</string>
    <string name="notopen">未開放報名</string>
    <string name="textFinishUpdate">確定更新旅遊團嗎？</string>
    <string name="textGroupUpdateMessage">開始報名後將無法編輯</string>
    <string name="textDate">1994/03/13</string>
    <string name="textmemName">陳曉安</string>
    <string name="textPass">1111</string>
    <string name="textmemEmail">anan@gmail.com</string>

</resources>
